<resources>
	<string name="app_name">Schober Clicker</string>

	<!--Settings-->
	<string name="action_settings">Settings</string>
	<string name="title_activity_settings">Settings</string>
	<string name="action_daten_refresh">Settings</string>

	<!--Preference-->
	<string name="preference_title">Main Settings</string>
	<string name="preference_category" translatable="false">Main Category</string>

	<string name="preference_lpwd_title">Low powered device</string>
	<string name="preference_lpwd_key" translatable="false">pfc_lpd</string>
	<string name="preference_lpwd_summary">Activate this if you don\'t want the animation</string>

	<string name="preference_music_title" translatable="false">Music on</string>
	<string name="preference_music_key" translatable="false">pfc_music</string>
	<string name="preference_music_summary" translatable="false">Turns the music on and off and on and off...</string>

	<string name="preference_info_title" translatable="false">Info</string>
	<string name="preference_info_key" translatable="false">pfc_info</string>
	<string name="preference_info_summary">Here you can see who contributed to this project and you can login and logoff google play services.</string>

	<string name="preference_pp_title">Privacy Polity</string>
	<string name="preference_pp_key" translatable="false">pfc_pp</string>
	<string name="preference_pp_summary">Opens the Privacy Polity of this app:\nhttps://sites.google.com/view/schober/privacy-policy</string>


	<!--Buttons-->
	<string name="action_info">Info</string>
	<string name="title_activity_info">Info</string>
	<string name="title_activity_upgrades">Upgrades</string>

	<!--Credits-->
	<string name="text_info" translatable="false">Credits:\n
		Clicker by Stefan P.\n
		Music by Philipp S.\n
		Google Plus Page by Luca N.\n
		Active Beta-Tester: Felix N. &amp; Luca N. &amp; Tobias P.\n</string>

	<!--Buttons on Info-->
	<string name="btn_music_on_off">Music Switch</string>
	<string name="signin_other_error">An error occurred</string>
	<string name="not_logged_in" translatable="true">You are not logged in!</string>

	<string name="btn_music_on" translatable="true">Music is on!</string>
	<string name="btn_music_off" translatable="true">Music is off!</string>

	<string name="btn_not_loggedin">Not Logged In!</string>
	<string name="btn_loggedin">Logged In!</string>

	<string name="btn_privacy_policy">Privacy Policy</string>


	<!--Wieviel felht-->
	<string name="dif1">You need</string>
	<string name="dif2">more</string>

	<!--UpgradeButtons-->
	<string name="upgradeTitel">Upgrades</string>
	<string name="upgrade1" translatable="true">Third Hand</string>
	<string name="upgrade2" translatable="true">Third Leg</string>
	<string name="upgrade3" translatable="true">Little Schober</string>
	<string name="upgrade1cost" translatable="false">1 Schober</string>
	<string name="upgrade2cost" translatable="false">100 Schober</string>
	<string name="upgrade3cost" translatable="false">500 Schober</string>
	<string name="improvment1" translatable="false">*1,3 Clicks</string>
	<string name="improvment2" translatable="false">+0,01 SPS</string>
	<string name="improvment3" translatable="false">+0,05 SPS</string>

	<!--Buttons on Main-->
	<string name="defaultclicks" translatable="false">0 Schober</string>
	<string name="defaultsps" translatable="false">+0.0 SPS</string>
	<string name="click_btn" translatable="false">Click</string>
	<string name="login" translatable="false">Login</string>
	<string name="logout" translatable="false">Logout</string>
	<string name="achievement_btn">Achievement</string>
	<string name="leaderboard">Leaderboard</string>

	<!--Background-->
	<integer name="duration">4500</integer>

	<!--NavBar-->
	<integer name="navbar">0</integer>

	<!--Content Description-->
	<string name="cd_settings_icon">Settings Icon</string>
	<string name="cd_schoberPfeilL">Schoberpfeil Left</string>
	<string name="cd_schoberPfeilR">Schoberpfeil Right</string>
	<string name="cd_achievments">Icon of Achievment Badge</string>
	<string name="cd_leaderboard">Icon of a leadboard</string>

	<!--Website-->
	<string name="ppUrlSchober" translatable="false">https://sites.google.com/view/schober/privacy-policy</string>

</resources>
