<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<Button
		android:id="@+id/sign_in_button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/login"
		android:visibility="gone"
		app:layout_constraintBottom_toTopOf="@+id/music_change_btn"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/sign_out_button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/logout"
		android:visibility="gone"
		app:layout_constraintBottom_toTopOf="@+id/music_change_btn"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="8dp"
		android:text="@string/text_info"
		android:textAlignment="center"
		android:textSize="18sp"
		android:visibility="visible"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/music_change_btn"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:enabled="true"
		android:onClick="Change_Musik"
		android:text="@string/btn_music_on_off"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />



	<Button
		android:id="@+id/btnPP"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:layout_marginBottom="8dp"
		android:background="@drawable/btn_upgrades"
		android:onClick="showPP"
		android:text="@string/btn_privacy_policy"
		android:visibility="gone"
		app:layout_constraintBottom_toTopOf="@+id/sign_in_button_iv"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>